
- Fixed AltGR key on certain JVMs that send it as Control+Alt.

- Regular expression replace didn't work with certain regular
  expressions.

- When deep indent is on, indentation of code like this is handled a bit
  better:

  if(foo
     bar)
  {

  However it is still not 100% correct.

- Added an option for the "deep indent" setting to the Editing option
  pane.

}}}
{{{ API Changes

- SearchMatcher.nextMatch() returns an instance of SearchMatcher.Match
  instead of a two-element integer array.

}}}

}}}

{{{ Version 4.2pre3

Thanks to Brad Mace, Brant Langer Gurganus, Christoph Daniel Schulze,
Jonathan Revusky, Ken Turner, Kris Kopicki and Ollie Rutherfurd for
contributing to this release.

{{{ Editing

- The kill ring no longer shows duplicate entries, or entries that
  consist entirely of whitespace.

- Added emacs-like "deep indent" which can be enabled using the
  deepIndent buffer-local property:

  fooBar(baz,
         moreParameters,
	 ...); (Brad Mace)

- Just like the Find Previous command, S+ENTER in the search bar now
  shows an error message if regular expression search is enabled.
  Previously it would just search forward.

- The "Format Paragraph" command now shows an error message instead of
  just beeping if the wrap margin is not set.

- The "Paste Previous" and "Paste From List" dialog boxes now show the
  selected item in a multiple-line text area (Ollie Rutherfurd).

}}}
{{{ Syntax Highlighting

- Added LOTOS syntax highlighting (Ken Turner).

- Added SDL/PL syntax highlighting (Ken Turner).

- Added IMPORT element to RULES tag. All rules from the ruleset named
  by the required attribute DELEGATE are copied into this ruleset.

- Improved Velocity syntax highlighting.

- Added TPL syntax highlighting (Brant Langer Gurganus).

- Added UnrealScript syntax highlighting (Christoph Daniel Schulze).

- Updated FreeMaker syntax highlighting (Jonathan Revusky).

- Updated Pyrex syntax highlighting (Ollie Rutherfurd).

}}}
{{{ User Interface
