@@ -139,7 +139,7 @@
 
 		<!-- Readins -->
 		<SPAN_REGEXP HASH_CHAR="<" TYPE="LITERAL1" DELEGATE="PHP_LITERAL">
-			<BEGIN><![CDATA[<<[[:space:]'"]*([[:alnum:]_]+)[[:space:]'"]*]]></BEGIN>
+			<BEGIN><![CDATA[<<<[[:space:]'"]*([[:alnum:]_]+)[[:space:]'"]*]]></BEGIN>
 			<END>$1</END>
 		</SPAN_REGEXP>
 
